# slideshow-sfml

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.json  config.txt  main.cpp
include/: config.h  font_manager.h  globals.h  image_manager.h  main_window.h  option.h  presenter.h  presenter_time.h  shader_manager.h  slide.h  slide_component.h  slideshow.h
run_tree/fonts/: DROID-LICENSE
run_tree/shaders/: green.glslf  green.glslv
src/: config.cpp  font_manager.cpp  image_manager.cpp  main.cpp  main_window.cpp  presenter.cpp  shader_manager.cpp  slide.cpp  slide_component.cpp  slideshow.cpp
